--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,41 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView android:id="@+id/item_text"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginLeft="8dp"
-              android:layout_marginStart="8dp"
-
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintTop_toTopOf="parent"/>
+              tools:ignore="RelativeOverlap"/>
 
     <CheckBox android:id="@+id/item_checkbox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginRight="8dp"
-              android:layout_marginEnd="8dp"
 
-              app:layout_constraintRight_toLeftOf="@id/item_delete_button"
-              app:layout_constraintTop_toTopOf="parent" />
+              android:layout_toLeftOf="@+id/item_delete_button"
+              android:layout_toStartOf="@+id/item_delete_button"
+              android:layout_centerVertical="true" />
 
     <ImageButton
             android:id="@+id/item_delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/todo"
 
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_delete"
-            android:contentDescription="@string/todo"/>
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+
+            app:srcCompat="@android:drawable/ic_delete"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
