--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:background="@drawable/round_corners"
@@ -12,7 +13,7 @@
               android:layout_height="wrap_content"
               android:layout_marginLeft="3dp"
               android:layout_marginStart="3dp"
-              tools:ignore="RelativeOverlap" />
+              tools:ignore="RelativeOverlap"/>
 
     <CheckBox android:id="@+id/item_checkbox"
               android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
 
               android:layout_toLeftOf="@+id/item_edit_button"
               android:layout_toStartOf="@+id/item_edit_button"
-              android:layout_centerVertical="true" />
+              android:layout_centerVertical="true"/>
 
     <ImageButton
             android:id="@+id/item_edit_button"
