--- a/app/src/main/res/layout/custom_entry_dialog.xml
+++ b/app/src/main/res/layout/custom_entry_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="320dp"
+                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="320dp"
                                                    android:layout_height="160dp">
 
     <EditText
@@ -20,6 +20,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+    <SeekBar android:id="@+id/red_seekbar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:progressDrawable="@drawable/red_seekbar_style"
+             android:max="255"
+             android:maxHeight="3dip"
+             android:minHeight="3dip"
+
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@id/entry_text"/>
+
+    <SeekBar android:id="@+id/green_seekbar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:progressDrawable="@drawable/green_seekbar_style"
+             android:max="255"
+             android:maxHeight="3dip"
+             android:minHeight="3dip"
+
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@id/red_seekbar"/>
+
+    <SeekBar android:id="@+id/blue_seekbar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:progressDrawable="@drawable/blue_seekbar_style"
+             android:max="255"
+             android:maxHeight="3dip"
+             android:minHeight="3dip"
+
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@id/green_seekbar"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
