--- a/app/src/main/res/layout/activity_set_data.xml
+++ b/app/src/main/res/layout/activity_set_data.xml
@@ -117,7 +117,38 @@
             app:layout_constraintTop_toBottomOf="@id/color_preview_button"
             tools:ignore="LabelFor"/>
 
+    <Button android:id="@+id/entry_leave_button"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginStart="72dp"
+            android:text="@string/back"
+            android:background="@drawable/round_corners"
+            android:shadowColor="@color/grey"
+            android:shadowDx="10"
+            android:shadowDy="10"
+            android:shadowRadius="10"
 
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/entry_hex_color_string"/>
+
+    <Button android:id="@+id/entry_submit_button"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="72dp"
+            android:text="@string/submit"
+            android:background="@drawable/round_corners"
+            android:shadowColor="@color/grey"
+            android:shadowDx="10"
+            android:shadowDy="10"
+            android:shadowRadius="10"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/entry_hex_color_string"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
