--- a/app/src/main/res/layout/activity_set_data.xml
+++ b/app/src/main/res/layout/activity_set_data.xml
@@ -22,7 +22,7 @@
               app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
-            android:id="@+id/entry_text"
+            android:id="@+id/entry_task_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -50,7 +50,7 @@
               android:layout_marginRight="24dp"
 
               app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/entry_text"/>
+              app:layout_constraintTop_toBottomOf="@id/entry_task_text"/>
 
     <SeekBar android:id="@+id/red_seekbar"
              android:layout_width="match_parent"
