--- a/app/src/main/res/layout/activity_set_data.xml
+++ b/app/src/main/res/layout/activity_set_data.xml
@@ -103,7 +103,7 @@
 
     <EditText
             android:id="@+id/entry_hex_color_string"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
@@ -111,6 +111,7 @@
             android:layout_marginRight="24dp"
             android:autofillHints=""
             android:text=""
+            android:maxLength="7"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
