--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -13,7 +13,11 @@
               android:layout_height="wrap_content"
               android:layout_marginLeft="3dp"
               android:layout_marginStart="3dp"
-              tools:ignore="RelativeOverlap"/>
+
+              android:layout_toStartOf="@id/item_checkbox"
+              android:layout_toLeftOf="@id/item_checkbox"
+              android:layout_alignParentStart="true"
+              android:layout_alignParentLeft="true"/>
 
     <CheckBox android:id="@+id/item_checkbox"
               android:layout_width="wrap_content"
