dividing task into two section -> not working yet

--- a/app/src/main/res/layout/activity_set_data.xml
+++ b/app/src/main/res/layout/activity_set_data.xml
@@ -125,7 +125,7 @@
             android:layout_marginLeft="72dp"
             android:layout_marginStart="72dp"
             android:text="@string/back"
-            android:background="@drawable/round_corners"
+            android:background="@drawable/round_corners_left"
             android:shadowColor="@color/grey"
             android:shadowDx="10"
             android:shadowDy="10"
@@ -142,7 +142,7 @@
             android:layout_marginEnd="72dp"
             android:layout_marginRight="72dp"
             android:text="@string/submit"
-            android:background="@drawable/round_corners"
+            android:background="@drawable/round_corners_left"
             android:shadowColor="@color/grey"
             android:shadowDx="10"
             android:shadowDy="10"
