--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -4,55 +4,75 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:background="@drawable/round_corners"
                 android:layout_margin="3dp">
 
-    <TextView android:id="@+id/item_text"
-              android:textSize="20sp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="3dp"
-              android:layout_marginStart="3dp"
+    <LinearLayout android:id="@+id/text_section"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:layout_alignParentLeft="true"
+                  android:layout_alignParentStart="true"
+                  android:layout_centerVertical="true"
+                  android:background="@drawable/round_corners_left"
 
-              android:layout_toStartOf="@id/item_checkbox"
-              android:layout_toLeftOf="@id/item_checkbox"
-              android:layout_alignParentStart="true"
-              android:layout_alignParentLeft="true"/>
+                  android:layout_toLeftOf="@id/action_section"
+                  android:layout_toStartOf="@id/action_section" >
 
-    <CheckBox android:id="@+id/item_checkbox"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
+        <TextView android:id="@+id/item_text"
+                  android:textSize="20sp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginLeft="3dp"
+                  android:layout_marginStart="3dp" />
 
-              android:layout_toLeftOf="@+id/item_edit_button"
-              android:layout_toStartOf="@+id/item_edit_button"
-              android:layout_centerVertical="true"/>
+    </LinearLayout>
 
-    <ImageButton
-            android:id="@+id/item_edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/todo"
 
-            android:layout_toLeftOf="@+id/item_delete_button"
-            android:layout_toStartOf="@+id/item_delete_button"
-            android:layout_centerVertical="true"
+    <RelativeLayout android:id="@+id/action_section"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:layout_alignParentEnd="true"
+                  android:layout_alignParentRight="true"
+                  android:layout_centerVertical="true"
+                  android:background="@drawable/round_corners_right" >
 
-            app:srcCompat="@drawable/ic_edit_pen"
-            tools:ignore="VectorDrawableCompat"/>
+        <CheckBox android:id="@+id/item_checkbox"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:layout_marginEnd="6dp"
+                  android:layout_marginRight="6dp"
 
-    <ImageButton
-            android:id="@+id/item_delete_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/todo"
+                  android:layout_alignParentLeft="true"
+                  android:layout_alignParentStart="true"/>
 
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+        <ImageButton
+                android:id="@+id/item_edit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/todo"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp"
 
-            app:srcCompat="@drawable/ic_delete"
-            tools:ignore="VectorDrawableCompat"/>
+                android:layout_toRightOf="@id/item_checkbox"
+                android:layout_toEndOf="@id/item_checkbox"
+
+                app:srcCompat="@drawable/ic_edit_pen"
+                tools:ignore="VectorDrawableCompat" />
+
+        <ImageButton
+                android:id="@+id/item_delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/todo"
+
+                android:layout_toRightOf="@id/item_edit_button"
+                android:layout_toEndOf="@id/item_edit_button"
+
+                app:srcCompat="@drawable/ic_delete"
+                tools:ignore="VectorDrawableCompat"/>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
