two sections of task are displayed properly

--- a/app/src/main/res/layout/activity_set_data.xml
+++ b/app/src/main/res/layout/activity_set_data.xml
@@ -31,6 +31,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:hint="@string/description"
+            android:maxLength="64"
             android:inputType="textEmailAddress"
             android:autofillHints=""
 
