changed color of right section of task, added brightness cal

--- a/app/src/main/res/drawable/round_corners_right.xml
+++ b/app/src/main/res/drawable/round_corners_right.xml
@@ -3,5 +3,5 @@
        android:shape="rectangle">
     <corners android:topRightRadius="10dp"
              android:bottomRightRadius="10dp"/>
-    <solid android:color="@color/lightgrey" />
+    <solid android:color="@color/grey" />
 </shape>
