--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -21,8 +21,7 @@
                   android:textSize="20sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:layout_marginLeft="3dp"
-                  android:layout_marginStart="3dp" />
+                  android:layout_margin="3dp" />
 
     </LinearLayout>
 
@@ -41,7 +40,8 @@
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_marginEnd="6dp"
-                  android:layout_marginRight="6dp" />
+                  android:layout_marginRight="6dp"
+                  android:buttonTint="@color/white"/>
 
         <ImageButton
                 android:id="@+id/item_edit_button"
