--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,15 @@
     <ListView
             android:id="@+id/todosListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:divider="@android:color/transparent"
             android:dividerHeight="4dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
 
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
