--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -5,26 +5,10 @@
              android:layout_height="match_parent"
              tools:context=".fragments.NoteFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
-
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_alignParentBottom="true"
-
-                app:itemBackground="@android:color/white"
-                app:itemIconSize="24dp"
-                app:elevation="2dp"
-                app:menu="@menu/bottom_menu_navigation"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:orientation="vertical"/>
 
 </FrameLayout>
