--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -31,28 +31,16 @@
                 android:id="@+id/fab_add_entry"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="64dp"
                 android:src="@drawable/ic_add_entry"
 
                 app:maxImageSize="30dp"
                 app:backgroundTint="@color/colorPrimary"
                 app:fabSize="normal"
-                app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_alignParentBottom="true"
-
-                app:itemBackground="@android:color/white"
-                app:itemIconSize="24dp"
-                app:elevation="2dp"
-                app:menu="@menu/bottom_menu_navigation"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-        />
+                app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
