--- a/app/src/main/res/layout/custom_note_item.xml
+++ b/app/src/main/res/layout/custom_note_item.xml
@@ -12,8 +12,11 @@
 
             app:cardElevation="4dp"
             app:cardCornerRadius="5dp">
-        <RelativeLayout android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+
+        <RelativeLayout android:id="@+id/card_relative_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorPrimaryDark">
             <ImageButton
                     android:id="@+id/card_delete_button"
                     android:layout_width="wrap_content"
@@ -56,7 +59,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/card_delete_button"
-                    android:layout_margin="3dp"/>
+                    android:layout_margin="3dp"
+                    android:textColor="@color/white"/>
         </RelativeLayout>
 
 
