--- a/app/src/main/res/layout/fragment_note_set_data.xml
+++ b/app/src/main/res/layout/fragment_note_set_data.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintBottom_toTopOf="@id/entry_leave_button"/>
 
 
-        <Button android:id="@+id/entry_leave_button"
+        <Button android:id="@+id/note_leave_button"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="64dp"
@@ -69,7 +69,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <Button android:id="@+id/entry_submit_button"
+        <Button android:id="@+id/note_submit_button"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="64dp"
