--- a/app/src/main/res/layout/fragment_note_set_data.xml
+++ b/app/src/main/res/layout/fragment_note_set_data.xml
@@ -22,7 +22,7 @@
                 android:layout_marginRight="24dp"
                 android:hint="@string/note_title_preview"
                 android:maxLength="32"
-                android:inputType="textCapCharacters"
+                android:inputType="text"
                 android:autofillHints=""
 
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/note_title_text"
-                app:layout_constraintBottom_toTopOf="@id/entry_leave_button"/>
+                app:layout_constraintBottom_toTopOf="@id/note_leave_button"/>
 
 
         <Button android:id="@+id/note_leave_button"
