improve SetDataFragment for Notes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
 
     <FrameLayout android:id="@+id/fl_wrapper"
                  android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />
+                 android:layout_height="0dp"
+                 app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+                 app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
@@ -23,6 +24,6 @@
             app:elevation="2dp"
             app:menu="@menu/bottom_menu_navigation"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
