--- a/app/src/main/res/layout/fragment_note_set_data.xml
+++ b/app/src/main/res/layout/fragment_note_set_data.xml
@@ -1,36 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.ToDoSetDataFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SetDataActivity">
 
-        <EditText
-                android:id="@+id/note_title_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:hint="@string/note_title_preview"
-                android:maxLength="32"
-                android:inputType="text"
-                android:autofillHints=""
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        <EditText
-                android:id="@+id/note_data_text"
+        <androidx.cardview.widget.CardView
+                android:id="@+id/note_edit_card"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
@@ -39,52 +20,97 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
-                android:hint="@string/note_text_preview"
-                android:autofillHints=""
-                android:scrollHorizontally="false"
-                android:background="@null"
-                android:inputType="textMultiLine"
-                android:gravity="top"
+                app:cardElevation="4dp"
+                app:cardCornerRadius="5dp"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/note_title_text"
-                app:layout_constraintBottom_toTopOf="@id/note_leave_button"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/note_data_constraint_layout"
+                                                               android:layout_width="match_parent"
+                                                               android:layout_height="match_parent"
+                                                               android:background="@color/lightgrey">
+
+                <EditText
+                        android:id="@+id/note_title_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:hint="@string/note_title_preview"
+                        android:maxLength="32"
+                        android:inputType="text"
+                        android:autofillHints=""
 
 
-        <Button android:id="@+id/note_leave_button"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="64dp"
-                android:layout_marginLeft="72dp"
-                android:layout_marginStart="72dp"
-                android:text="@string/back"
-                android:background="@drawable/round_corners_left"
-                android:shadowColor="@color/grey"
-                android:shadowDx="10"
-                android:shadowDy="10"
-                android:shadowRadius="10"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/note_data_text"/>
 
+                <EditText
+                        android:id="@+id/note_data_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_margin="2dp"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                        android:hint="@string/note_text_preview"
+                        android:autofillHints=""
+                        android:scrollHorizontally="false"
+                        android:background="@null"
+                        android:inputType="textMultiLine"
+                        android:gravity="top"
 
-        <Button android:id="@+id/note_submit_button"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="64dp"
-                android:layout_marginEnd="72dp"
-                android:layout_marginRight="72dp"
-                android:text="@string/submit"
-                android:background="@drawable/round_corners_left"
-                android:shadowColor="@color/grey"
-                android:shadowDx="10"
-                android:shadowDy="10"
-                android:shadowRadius="10"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/note_title_text"
+                        app:layout_constraintBottom_toTopOf="@id/note_footer_relative_layout"/>
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                <LinearLayout android:id="@+id/note_footer_relative_layout"
+                              android:layout_width="match_parent"
+                              android:layout_height="40dp"
+                              android:background="@color/grey"
+                              android:orientation="horizontal"
+                              android:baselineAligned="false"
 
+                              app:layout_constraintBottom_toBottomOf="parent"
+                              app:layout_constraintLeft_toLeftOf="parent"
+                              app:layout_constraintLeft_toRightOf="parent">
+
+                    <Button android:id="@+id/note_leave_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/back"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                    <Button android:id="@+id/note_color_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/color"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                    <Button android:id="@+id/note_submit_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/submit"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
