note can now be edited in overview (highlighting and visibility)

--- a/app/src/main/res/layout/custom_note_item.xml
+++ b/app/src/main/res/layout/custom_note_item.xml
@@ -35,6 +35,8 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/todo"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginRight="20dp"
 
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
@@ -49,8 +51,10 @@
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/todo"
 
-                        android:layout_toLeftOf="@id/note_delete_button"
-                        android:layout_toStartOf="@id/note_delete_button"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
 
                         app:srcCompat="@drawable/ic_star_empty"
                         tools:ignore="VectorDrawableCompat"/>
@@ -61,9 +65,11 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/todo"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
 
-                        android:layout_toLeftOf="@id/note_highlight_button"
-                        android:layout_toStartOf="@id/note_highlight_button"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
 
                         app:srcCompat="@drawable/ic_visibility_on"
                         tools:ignore="VectorDrawableCompat"/>
